Thu Jan 17 12:13:51 2002  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Context.h (private_key, verify_private_key):

	  Added new documentation.  These methods should only be called
	  after a certificate has been set since key verification is
	  performed against the certificate, among other things.

Thu Jan 17 13:11:27 2002  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Message_Queue.h:
        * ace/Message_Queue.cpp:
        * ace/Message_Queue_T.h:
        * ace/Message_Queue_T.cpp:

          Provide the ability to enqueue based on the message deadline and
          to dequeue based on priority, deadline and from the end.

Wed Jan 16 11:24:52 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* THANKS: 
	  Updated to add Gerhard Voss <Gerhard_Voss@t-online.de>.

Wed Jan 16 06:19:01 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>

	* ace/OS.i: Replaced "set" with "sset" in sigtimedwait() and sigwait()
	  to avoid STL symbol clashes with MSVC++ 6.0.  Thanks to Shmulik
 	  Regev <shmul@vself.com> for reporting this.

Wed Jan 16 09:01:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Containers_T.{h,cpp}:
          Added ACE_Fixed_Set_Const_Iterator to make it possible to
          iterate through a const ACE_Fixed_Set instance

Wed Jan 16 07:53:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added new flags for the new TAO ETCL orbsvcs library

Tue Jan 15 17:24:53 2002  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_Context.cpp (report_error()): Set ACE_OS::last_error()
          to ERR_get_error() so the caller can get the error code later.

        * ace/SSL/SSL_SOCK_Connector.cpp: If the SSL handshake phase of a
          connection attempt fails, close the underlying socket.

Tue Jan 15 15:35:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Connector.(h cpp):
        * ace/LSOCK_Connector.(h i cpp):
        * ace/MEM_Connector.(h cpp):