@@ -1421,6 +1421,7 @@ Shmulik Regev <shmul@vself.com>
 Andrew L. Shwaika <als@solvo.ru>
 Gerhard Voss <Gerhard_Voss@t-online.de>
 Gregor Bruce <gregorb@clear.net.nz>
+Ian Cahoon <icahoon@cisco.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
